# EDA

./: .gitignore  pyproject.toml  requirements.txt
src/: EDA.ipynb  analyze_tuning.py  analyzer_factory.py  classifier.py  classifier_transformer.py  clustering_exp.py  config.py  data.py  dry_run.py  embedder.py  eval_cluster_classifier.py  eval_greedy.py  eval_tft.py  exp.ipynb  exp2.ipynb  exp_utils.py  feature_processor.py  fine_tune_hybrid.py  fine_tuner.py  greedy_analyzer.py  greedy_finder.py  greedy_tuner.py  group_analyzer.py  hyb_emb_service.py  hybrid_siamese.py  hyper_tuner.py  log_utils.py  pattern_finder.py  runner.py  stability_validator.py  tft_data.py  tft_data_clustered.py  tft_model.py  tft_train.py  trainer.py  try_group_finder.py  ts_eval_dates.py  ts_eval_neural.py  ts_neural_cleaner.py  ts_robust_analyzer.py  (+2 more)
src/common/: config.py  data.py  embedder.py  exp_utils.py  feature_processor.py  hyb_emb_service.py
src/experiments/: per_bank_mlp.py  tft_tune1.py  tft_tune10.py  tft_tune2.py  tft_tune3.py  tft_tune4.py  tft_tune5.py  tft_tune6.py  tune1.py  tune10.py  tune103.py  tune2.py  tune3.py  tune4.py  tune5.py  tune6.py  tune7.py  tune8.py  tune9.py  tune_101.py  tune_102.py  tune_103.py  tune_104.py  tune_cluster1.py  tune_cluster11.py  tune_cluster2.py  tune_ft_1.py  tune_greedy1.py
src/glob/: classifier.py  classifier_transformer.py  exp2.ipynb  fine_tune_hybrid.py  fine_tuner.py  hyper_tuner.py
tests/: test_embedder.py  test_feat_proc_params.py  test_feat_processor.py  test_mlp_pipeline.py  test_multi_local.py  test_save_load.py
(+93 files in other folders)
